hphp/hack/test/typecheck/inout/bad_inout_use_arg9.php.exp
File "bad_inout_use_arg9.php", line 10, characters 5-19:
You cannot decorate this argument as `inout` (Parsing[1002])
File "bad_inout_use_arg9.php", line 10, characters 11-19:
`inout` arguments may only be local variables or array indexing expressions  (NastCheck[3050])
